--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 A progression of rare and beautiful ingredients where 
                 texture, flavour and harmony is paramount. Delve into 
                 the Quay dining experience with Peter Gilmore’s Ten 
-                Course Menu and thoughtfully curated Wine List by Fink 
-                Wine Director Amanda Yallop, and Quay Head Sommelier, 
+                Course Menu and thoughtfully curated Wine List by 
+                Wine Director Amanda Yallop, and bREAk Head Sommelier, 
                 Shanteh Wong.
             </p>
             <button class="section-2-button">Read More</button>
@@ -56,14 +56,14 @@
         <section class="section-3">
         </section>
         <section class="section-4">
-            <h1 class="section-4-h1">MENU</h1>
+            <h1 class="section-4-h1">PETER GILMORE</h1>
             <p class="section-4-p">
-                A progression of rare and beautiful ingredients where 
-                texture, flavour and harmony is paramount. Delve into 
-                the Quay dining experience with Peter Gilmore’s Ten 
-                Course Menu and thoughtfully curated Wine List by Fink 
-                Wine Director Amanda Yallop, and Quay Head Sommelier, 
-                Shanteh Wong.
+                Peter’s appreciation of nature’s diversity 
+                and his endless experimentation in the 
+                kitchen and garden are the driving forces 
+                in his cooking. Peter leads the bREAk team 
+                with a focus on excellence, innovation and 
+                hospitality.
             </p>
             <button class="section-4-button">Read More</button>
         </section>
@@ -71,30 +71,29 @@
             <img src="restaurant.jpg" alt="" class="restaurant">
         </section>
         <section class="section-6">
-            <h1 class="section-6-h1">MENU</h1>
+            <h1 class="section-6-h1">EVENTS</h1>
             <p class="section-6-p">
-                A progression of rare and beautiful ingredients where 
-                texture, flavour and harmony is paramount. Delve into 
-                the Quay dining experience with Peter Gilmore’s Ten 
-                Course Menu and thoughtfully curated Wine List by Fink 
-                Wine Director Amanda Yallop, and Quay Head Sommelier, 
-                Shanteh Wong.
+                Celebrate at one of Sacramento's most 
+                awarded restaurants, with panoramic views 
+                encompassing the Sacramento Bridge and 
+                Elk Grove Opera House. From intimate dinner 
+                parties in the Private Dining Room, to large 
+                cocktail events in The Green Room.
             </p>
             <button class="section-6-button">Read More</button>
         </section>
 
         <section class="section-7">
             <div class="section-7-title-1">
-                SPECIAL MENU
+                DELICIOUS MONTH OUT
             </div>
             <div class="section-7-title-2">
-                MIX BREAKFAST WITH DESSERT
+                A DELICIOUS EVENING WITH PETER GILMORE
             </div>
             <div class="section-7-paragraph">
-                As we step into a new decade, 
-                Quay launches a new way to 
-                experience lunch by Sydney 
-                Harbour. Available in
+                Join us at bREAk on Thursday 26th March 
+                for an intimate evening with chef 
+                Peter Gilmore. 
             </div>
             <div class="section-7-btn">
                 READ MORE
@@ -106,13 +105,13 @@
                 SPECIAL MENU
             </div>
             <div class="section-8-title-2">
-                MIX BREAKFAST WITH DESSERT
+                THE bREAk to BREAKFAST
             </div>
             <div class="section-8-paragraph">
                 As we step into a new decade, 
-                Quay launches a new way to 
-                experience lunch by Sydney 
-                Harbour. Available in
+                bREAk launches a new way to 
+                experience breakfast by the 
+                Sacramento Bridge
             </div>
             <div class="section-8-btn">
                 READ MORE
@@ -121,16 +120,15 @@
         </section>
         <section class="section-9">
             <div class="section-9-title-1">
-                SPECIAL MENU
+                TEA TIME
             </div>
             <div class="section-9-title-2">
-                MIX BREAKFAST WITH DESSERT
+                TRY TEA INSTEAD OF COFFEE
             </div>
             <div class="section-9-paragraph">
-                As we step into a new decade, 
-                Quay launches a new way to 
-                experience lunch by Sydney 
-                Harbour. Available in
+                We import quality teas from all 
+                around the world to offer a world
+                class experience for our guests
             </div>
             <div class="section-9-btn">
                 READ MORE
@@ -139,16 +137,17 @@
         </section>
         <section class="section-10">
             <div class="section-10-title-1">
-                SPECIAL MENU
+                WINE NEWS
             </div>
             <div class="section-10-title-2">
-                MIX BREAKFAST WITH DESSERT
+                NEW WINE PAIRING
             </div>
             <div class="section-10-paragraph">
-                As we step into a new decade, 
-                Quay launches a new way to 
-                experience lunch by Sydney 
-                Harbour. Available in
+                bREAk's Benchmark pairing is a 
+                celebration of local and 
+                international wines that have 
+                set the standard for quality 
+                and prestige
             </div>
             <div class="section-10-btn">
                 READ MORE
@@ -157,16 +156,16 @@
         </section>
         <section class="section-11">
             <div class="section-11-title-1">
-                SPECIAL MENU
+                SPECIAL NEWS
             </div>
             <div class="section-11-title-2">
-                MIX BREAKFAST WITH DESSERT
+                INTRODUCING BRIDGECLIMB PINNACLE
             </div>
             <div class="section-11-paragraph">
-                As we step into a new decade, 
-                Quay launches a new way to 
-                experience lunch by Sydney 
-                Harbour. Available in
+                Quay and Bennelong are excited to 
+                announce a new partnership with 
+                BridgeClimb; exclusively pairing 
+                two of Sydney’s most iconic experiences. 
             </div>
             <div class="section-11-btn">
                 READ MORE
