--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             </div>
             <ul>
                 <li>home</li>
-                <li>chef</li>
-                <li>events</li>
                 <li>menu</li>
+                <li>about</li>
                 <li>news</li>
                 <li>events</li>
+                <li>weddings</li>
             </ul>
         </aside>
         
