--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@
             <div class="sidenav-close-icon">
                 <i class="fa fa-times fa-lg" aria-hidden="true"></i>
             </div>
-            <ul>
-                <li>home</li>
-                <li>menu</li>
-                <li>about</li>
-                <li>news</li>
-                <li>events</li>
-                <li>weddings</li>
-            </ul>
+                <a href="index.html" class="menu-list">home</a>
+                <a href="menu.html" class="menu-list">menu</a>
+                <a href="about.html" class="menu-list">about</a>
+                <a href="news.html" class="menu-list">news</a>
+                <a href="events.html" class="menu-list">events</a>
+                <a href="weddings.html" class="menu-list">weddings</a>
+
         </aside>
         
         <section class="section-1">
@@ -51,12 +50,12 @@
                 Wine Director Amanda Yallop, and bREAk Head Sommelier, 
                 Shanteh Wong.
             </p>
-            <button class="section-2-button">Read More</button>
+            <form action="menu.html"> <button class="section-2-button">Read More</button> </form>
         </section>
         <section class="section-3">
         </section>
         <section class="section-4">
-            <h1 class="section-4-h1">PETER GILMORE</h1>
+            <h1 class="section-4-h1">PETER RAMSAY AND bREAk</h1>
             <p class="section-4-p">
                 Peter’s appreciation of nature’s diversity 
                 and his endless experimentation in the 
@@ -65,7 +64,8 @@
                 with a focus on excellence, innovation and 
                 hospitality.
             </p>
-            <button class="section-4-button">Read More</button>
+            <form action="about.html"> <button class="section-4-button">Read More</button> </form>
+            
         </section>
         <section class="section-5">
             <img src="restaurant.jpg" alt="" class="restaurant">
@@ -80,7 +80,7 @@
                 parties in the Private Dining Room, to large 
                 cocktail events in The Green Room.
             </p>
-            <button class="section-6-button">Read More</button>
+            <form action="events.html"> <button class="section-6-button">Read More</button> </form>    
         </section>
 
         <section class="section-7">
@@ -88,15 +88,15 @@
                 DELICIOUS MONTH OUT
             </div>
             <div class="section-7-title-2">
-                A DELICIOUS EVENING WITH PETER GILMORE
+                A DELICIOUS EVENING WITH PETER 
             </div>
             <div class="section-7-paragraph">
                 Join us at bREAk on Thursday 26th March 
                 for an intimate evening with chef 
-                Peter Gilmore. 
+                Peter Ramsay. 
             </div>
             <div class="section-7-btn">
-                READ MORE
+                <a href="events.html" class="links">READ MORE</a>
             </div>
             <img src="breakfast-dessert.jpg" alt="" class="breakfast-dessert">
         </section>
@@ -114,7 +114,7 @@
                 Sacramento Bridge
             </div>
             <div class="section-8-btn">
-                READ MORE
+                <a href="menu.html" class="links">READ MORE</a>
             </div>
             <img src="mimosa.jpg" alt="" class="mimosa">
         </section>
@@ -131,7 +131,7 @@
                 class experience for our guests
             </div>
             <div class="section-9-btn">
-                READ MORE
+                <a href="menu.html" class="links">READ MORE</a>
             </div>
             <img src="tea.jpg" alt="" class="tea">
         </section>
@@ -150,7 +150,7 @@
                 and prestige
             </div>
             <div class="section-10-btn">
-                READ MORE
+                <a href="events.html" class="links">READ MORE</a>
             </div>
             <img src="wine-night.jpg" alt="" class="wine-night">
         </section>
@@ -168,14 +168,14 @@
                 two of Sydney’s most iconic experiences. 
             </div>
             <div class="section-11-btn">
-                READ MORE
+                <a href="news.html" class="links">READ MORE</a>
             </div>
             <img src="high-rise.jpg" alt="" class="high-rise">
         </section>
 
         <section class="section-12">
             <p class="continue">
-                CONTINUE READING OUR NEWS <a href="#" class="here">HERE</a> 
+                CONTINUE READING OUR NEWS <a href="news.html" class="here">HERE</a> 
             </p>
         </section>
     </div>
