--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section class="section-3">
         </section>
         <section class="section-4">
-            <h1 class="section-4-h1">PETER RAMSAY AND bREAk</h1>
+            <h1 class="section-4-h1">PETER RAMSAY</h1>
             <p class="section-4-p">
                 Peter’s appreciation of nature’s diversity 
                 and his endless experimentation in the 
